--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -70,3 +70,68 @@ footer {
     opacity: 0.5;
 }
  
+
+/* ==================spinner=============== */
+@keyframes ldio-qvl0y5ws6c {
+  0% { transform: scale(1.1500000000000001) }
+  100% { transform: scale(1) }
+}
+.ldio-qvl0y5ws6c div {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  top: 13.333333333333336px;
+  left: 13.333333333333336px;
+  background: #e15b64;
+  animation: ldio-qvl0y5ws6c 1s cubic-bezier(0,0.5,0.5,1) infinite;
+  animation-delay: -0.3s;
+}
+.ldio-qvl0y5ws6c div:nth-child(2) {
+  top: 13.333333333333336px;
+  left: 106.66666666666666px;
+  background: #f47e60;
+  animation-delay: -0.2s;
+}
+.ldio-qvl0y5ws6c div:nth-child(3) {
+  top: 106.66666666666666px;
+  left: 13.333333333333336px;
+  background: #abbd81;
+  animation-delay: 0s;
+}
+.ldio-qvl0y5ws6c div:nth-child(4) {
+  top: 106.66666666666666px;
+  left: 106.66666666666666px;
+  background: #f8b26a;
+  animation-delay: -0.1s;
+}
+.loadingio-spinner-cube-mk3avibuovr {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+  background: #ffffff;
+}
+.ldio-qvl0y5ws6c {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+
+.ldio-qvl0y5ws6c div { box-sizing: content-box; }
+
+#spinner{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+}
+#spinner_inner{
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  margin-left: -7em;
+     
+}
