--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,8 +1,10 @@
 <div class="page-overlay-wrapper justify-content-center" *ngIf="showSpinner" >
-    <!-- <div class="bee-spinner" style="width: 100px; height: 100px;" role="status">
-        <span class="sr-only">Loading...</span>
-      </div> -->
-      <div class="spinner-border text-danger roundSpinner" style="width: 3rem; height: 3rem;border-width: 8px;" role="status">
-        <span class="sr-only">Loading...</span>
+      <div class="loadingio-spinner-cube-mk3avibuovr" id="spinner"  >
+        <div class="ldio-qvl0y5ws6c" id="spinner_inner">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
 </div>
