--- a/src/app/user/dashboard/profile/profile.component.css
+++ b/src/app/user/dashboard/profile/profile.component.css
@@ -35,6 +35,7 @@
   }
   h6,h5{
       margin-bottom: 20px;
+      
   }
   #address{
       font-style: italic !important;
@@ -43,3 +44,15 @@
   #email{
       font-size: large;
   }
+
+  input{
+      padding: 15px;
+  }
+
+  .has-error{
+      border:2px solid rgb(134, 32, 32)
+  }
+
+ .disabled_color{
+     color: gray !important;
+ }
